# file-management

./: .dockerignore  .gitignore  BACKEND_API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nexalearn_pipeline_design.md
frontend/: index.html  index.legacy.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
migrations/: 0001_init.sql  0002_chat_history.sql  0003_chat_sessions.sql  0004_chat_waiting_status.sql  0005_courses.sql  0006_semantic_chat_cache.sql  0007_chat_message_cache_metadata.sql  0008_semantic_cache_question_terms.sql  0009_document_rag.sql  0010_exam_attempt_history_indexes.sql  0011_adaptive_irt.sql  0012_adaptive_course_scope.sql
scripts/: run-frontend-dev.sh  run-host-backend.sh  start-infra.sh
services/whisper_service/: Dockerfile  main.py  requirements.txt
src/: chat.rs  config.rs  courses.rs  document_processing.rs  documents.rs  embedding.rs  error.rs  frontend.rs  lib.rs  main.rs  models.rs  recovery.rs  state.rs  videos.rs
src/assessment/: adaptive.rs  context.rs  grader.rs  handler.rs  justifier.rs  mod.rs  performance.rs
src/chat/: prompt.rs  semantic_cache.rs
src/db/: mod.rs  pool.rs
src/ingestion/: audio.rs  handler.rs  mod.rs  question_gen.rs  segmenter.rs  summarizer.rs  topic_labeler.rs  worker.rs
src/llm/: gemma.rs  handler.rs  mod.rs
src/storage/: mod.rs  rustfs.rs
src/whisper/: client.rs
tests/: assessment_integration.rs  backend_parts_integration.rs
